# opengl_slitherio

./: CMakeLists.txt  README.md  run.sh
source/: Background.cpp  Background.hpp  BackgroundFragmentShader.frag  BackgroundGeometryShader.geom  BackgroundVertexShader.vert  FloatComparisons.hpp  Renderer.cpp  Renderer.hpp  SimpleFragmentShader.frag  SimpleVertexShader.vert  Slither.cpp  Slither.hpp  SnakeTessControl.tesc  SnakeTessEval.tese  SnakeVertexShader.vert  TessControl.tesc  TessEval.tese  main.cpp  main.hpp
util/: Shader.cpp  Shader.h
